mattermost-atomicapp/artifacts/openshift/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mattermost
  labels:
    name: mattermost
spec:
  containers:
    - image: $image
      name: mattermost
      ports:
        - name: mattermost
          containerPort: $hostport
