mattermost-atomicapp/artifacts/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: mattermost-svc
  name: mattermost-svc
spec:
  ports:
    - port: 80
      targetPort: $hostport
      name: mattermost-svc
  selector:
    name: mattermost
