mattermost-atomicapp/artifacts/openshift/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: mattermost-route
  labels:
    name: mattermost-route
spec:
  host: $endpoint
  to:
    kind: Service
    name: mattermost-svc
